# docs/swagger.json
@@ -4,6 +4,30 @@
         "contact": {}
     },
     "paths": {
+        "/database/health/check": {
+            "get": {
+                "description": "get the status of the database.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "root"
+                ],
+                "summary": "Show the status of the database.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/health/check": {
             "get": {
                 "description": "get the status of server.",
