# main.go
@@ -2,12 +2,15 @@ package main
 
 import (
 	"echoStars/computer"
+	"echoStars/dataBase"
 	_ "echoStars/docs"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 	echoSwagger "github.com/swaggo/echo-swagger"
 	"net/http"
 )
+
+const fileName = "data.db"
 
 func main() {
 	// Echo instance
@@ -20,6 +23,9 @@ func main() {
 	// Routes
 	e.GET("/health/check", HealthCheck)
 	e.GET("/health/info", Info)
+
+	e.GET("/database/health/check", DataBaseHealthCheck)
+
 	//swagger
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 
@@ -39,6 +45,29 @@ func HealthCheck(c echo.Context) error {
 	return c.JSON(http.StatusOK, map[string]interface{}{
 		"data": "Server is up and running",
 	})
+}
+
+// DataBaseHealthCheck godoc
+// @Summary Show the status of the database.
+// @Description get the status of the database.
+// @Tags root
+// @Accept */*
+// @Produce json
+// @Success 200 {object} map[string]interface{}
+// @Router /database/health/check [get]
+func DataBaseHealthCheck(c echo.Context) error {
+	isOk, error := dataBase.CheckDb(fileName)
+	if isOk {
+		return c.JSON(http.StatusOK, map[string]interface{}{
+			"data":  "Database is up and running",
+			"error": "",
+		})
+	} else {
+		return c.JSON(http.StatusOK, map[string]interface{}{
+			"data":  "We have a problem!",
+			"error": error.Error(),
+		})
+	}
 }
 
 // Info godoc
